@@ -10,6 +10,7 @@ ENHANCEMENTS
 * Added notifications on flexible downtime expiration (Dan Wittenberg)
 
 FIXES
+* Corrected calulation of host importance and importance defaults (Eric Stanley)
 * Fixed bug #498: Nagios 4 enable_environment_macros=1 not working (Eric Stanley, Alexey Dvoryanchikov)
 * No longer checks whether logs can be written when verifying configuration (Eric Stanley)
 * Fixed CGI bug where the CGI could read past the end of the list of CGI variables, potentially crashing the CGI (Scott Wilkerson)
